// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components Pagination renders correctly 1`] = `
<Container>
  <nav
    className="mt-4"
  >
    <ul
      className="pagination justify-content-end"
    >
      <li
        className="page-item"
      >
        <Component
          className="page-link"
          to="/blog/2"
        >
          Back
        </Component>
      </li>
      <li
        className="page-item"
      >
        <Component
          className="page-link"
          to="/blog/4"
        >
          Next
        </Component>
      </li>
    </ul>
  </nav>
</Container>
`;

exports[`components Pagination renders correctly if it links to the first page 1`] = `
<Container>
  <nav
    className="mt-4"
  >
    <ul
      className="pagination justify-content-end"
    >
      <li
        className="page-item"
      >
        <Component
          className="page-link"
          to="/blog/"
        >
          Back
        </Component>
      </li>
      <li
        className="page-item"
      >
        <Component
          className="page-link"
          to="/blog/3"
        >
          Next
        </Component>
      </li>
    </ul>
  </nav>
</Container>
`;
